--- a/app/src/main/res/menu/result_menu.xml
+++ b/app/src/main/res/menu/result_menu.xml
@@ -2,4 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/test"
         android:title="Test"/>
+    <item android:id="@+id/download_photos"
+        android:title="Download Photos"/>
+    <item android:id="@+id/gallery"
+        android:title="Gallery"/>
 </menu>
